--- a/src/firstScreen.fxml
+++ b/src/firstScreen.fxml
@@ -9,16 +9,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<AnchorPane fx:controller="Controller" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <ImageView fitHeight="414.0" fitWidth="397.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@map.png" />
+                <Image url="map.png" />
             </image>
         </ImageView>
         <ImageView fitHeight="141.0" fitWidth="141.0" layoutX="428.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@boston_logo.png" />
+                <Image url="boston_logo.png" />
             </image>
         </ImageView>
         <Text fill="WHITE" layoutX="14.0" layoutY="363.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" WELCOME TO THE BOSTON METRO">
@@ -31,18 +33,18 @@
                 <Font size="13.0" />
             </font>
         </Text>
-        <MenuButton layoutX="426.0" layoutY="252.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-border-color: #0B132B; -fx-background-color: ffffff;" text="END DESTINATION" textFill="#0b132b">
+        <MenuButton fx:id="endDestSelector"  layoutX="426.0" layoutY="252.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-border-color: #0B132B; -fx-background-color: ffffff;" text="END DESTINATION" textFill="#0b132b">
             <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
             </items>
         </MenuButton>
-        <Button layoutX="426.0" layoutY="315.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="154.0" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="FIND A ROUTE" textFill="WHITE">
+        <Button  fx:id="findButton" onAction="#findButtonClicked" layoutX="426.0" layoutY="315.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="154.0" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="FIND A ROUTE" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
         </Button>
-        <MenuButton layoutX="425.0" layoutY="216.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" text="START DESTINATION" textFill="#0b132b">
+        <MenuButton fx:id="startDestSelector" layoutX="425.0" layoutY="216.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" text="START DESTINATION" textFill="#0b132b">
             <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
