--- a/src/firstScreen.fxml
+++ b/src/firstScreen.fxml
@@ -33,22 +33,17 @@
                 <Font size="13.0" />
             </font>
         </Text>
-        <MenuButton fx:id="endDestSelector"  layoutX="426.0" layoutY="252.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-border-color: #0B132B; -fx-background-color: ffffff;" text="END DESTINATION" textFill="#0b132b">
-            <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-            </items>
-        </MenuButton>
+
+        <ComboBox fx:id="endDestSelector" promptText="END DESTINATION" layoutX="426.0" layoutY="252.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" >
+
+        </ComboBox>
         <Button  fx:id="findButton" onAction="#findButtonClicked" layoutX="426.0" layoutY="315.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="154.0" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="FIND A ROUTE" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
         </Button>
-        <MenuButton fx:id="startDestSelector" layoutX="425.0" layoutY="216.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" text="START DESTINATION" textFill="#0b132b">
-            <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-            </items>
-        </MenuButton>
+        <ComboBox fx:id="startDestSelector" promptText="START DESTINATION" layoutX="425.0" layoutY="216.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;">
+
+        </ComboBox>
     </children>
 </AnchorPane>
