--- a/src/firstScreenView.fxml
+++ b/src/firstScreenView.fxml
@@ -11,9 +11,9 @@
 
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ChoiceBox?>
-<AnchorPane fx:controller="Controller" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:controller="View" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <ImageView fitHeight="414.0" fitWidth="397.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="titleImage" fitHeight="414.0" fitWidth="397.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="map.png" />
             </image>
