--- a/resources/mapView.fxml
+++ b/resources/mapView.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="746.0" prefWidth="1171.0" style="-fx-background-color: #16249e;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mapController">
+<AnchorPane prefHeight="746.0" prefWidth="1171.0" style="-fx-background-color: #000b59;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mapController">
    <children>
       <Group layoutX="185.0" layoutY="3.0">
          <children>
-            <ImageView fitHeight="754.0" fitWidth="847.0" layoutX="-21.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="754.0" fitWidth="904.0" layoutX="-21.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@boston-map.jpg" />
+                  <Image url="@Images/boston-map.jpg" />
                </image>
             </ImageView>
             <Button fx:id="Riverside" layoutX="31.0" layoutY="427.0" mnemonicParsing="false" onAction="#getName" prefHeight="10.0" prefWidth="16.0" style="-fx-background-color: #149f6a;">
