cicrcles for station selection

--- a/resources/firstScreenView.fxml
+++ b/resources/firstScreenView.fxml
@@ -35,12 +35,22 @@
                 <Font size="13.0" />
             </font>
         </Text>
+        <ImageView fx:id="circleStart" fitHeight="50" fitWidth="50" layoutX="723.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true">
+            <image >
+                <Image url="Images/whiteCircle.png" />
+            </image>
+        </ImageView>
         <ComboBox fx:id="startDestSelector" onHidden="#changeSelectorColourStart" minHeight="40" minWidth="200" promptText="START DESTINATION" layoutX="743.0" layoutY="250.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleStartSelector"/>
         <Text fx:id="endStationErrorMsg" text = "please choose end station" layoutX="743.0" layoutY="315.0" style="-fx-fill: red;" visible="false">
             <font>
                 <Font size="13.0" />
             </font>
         </Text>
+        <ImageView fx:id="circleEnd" fitHeight="50" fitWidth="50" layoutX="723.0" layoutY="315.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="Images/whiteCircle.png" />
+            </image>
+        </ImageView>
         <ComboBox fx:id="endDestSelector" onHidden="#changeSelectorColourEnd" minHeight="40" minWidth="200" promptText="END DESTINATION" layoutX="743.0" layoutY="320.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleEndSelector"/>
         <Button  fx:id="findButton" minHeight="50" minWidth="200"  onAction="#findPathBtnClicked" layoutX="743.0" layoutY="450.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="154.0" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="FIND A ROUTE" textFill="WHITE" >
             <font>
