--- a/resources/firstScreenView.fxml
+++ b/resources/firstScreenView.fxml
@@ -41,6 +41,11 @@
             </image>
         </ImageView>
         <ComboBox fx:id="startDestSelector" onHidden="#changeSelectorColourStart" minHeight="40" minWidth="200" promptText="START DESTINATION" layoutX="743.0" layoutY="250.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleStartSelector"/>
+        <ImageView fx:id="mapButtonStart" onMouseClicked="#mapButtonStartClicked" fitHeight="50" fitWidth="50" layoutX="960.0" layoutY="235.0" pickOnBounds="true" preserveRatio="true">
+            <image >
+                <Image url="Images/mapIcon.png" />
+            </image>
+        </ImageView>
         <Text fx:id="endStationErrorMsg" text = "please choose end station" layoutX="743.0" layoutY="315.0" style="-fx-fill: red;" visible="false">
             <font>
                 <Font size="13.0" />
@@ -52,6 +57,11 @@
             </image>
         </ImageView>
         <ComboBox fx:id="endDestSelector" onHidden="#changeSelectorColourEnd" minHeight="40" minWidth="200" promptText="END DESTINATION" layoutX="743.0" layoutY="320.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleEndSelector"/>
+        <ImageView fx:id="mapButtonEnd" fitHeight="50" fitWidth="50" layoutX="960.0" layoutY="310.0" pickOnBounds="true" preserveRatio="true">
+            <image >
+                <Image url="Images/mapIcon.png" />
+            </image>
+        </ImageView>
         <Button  fx:id="findButton" minHeight="50" minWidth="200"  onAction="#findPathBtnClicked" layoutX="743.0" layoutY="450.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="154.0" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="FIND A ROUTE" textFill="WHITE" >
             <font>
                 <Font name="System Bold" size="16.0" />
