--- a/resources/firstScreenView.fxml
+++ b/resources/firstScreenView.fxml
@@ -15,9 +15,29 @@
                 <Image url="Images/abstractMap.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="175.0" fitWidth="175.0" layoutX="758.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fx:id="yellowLine" fitHeight="175.0" fitWidth="175.0" layoutX="758.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="Images/boston_logo.png" />
+                <Image url="Images/yellow.png" />
+            </image>
+        </ImageView>
+        <ImageView fx:id="redLine" fitHeight="175.0" fitWidth="175.0" layoutX="758.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="Images/red.png" />
+            </image>
+        </ImageView>
+        <ImageView fx:id="greenLine" fitHeight="175.0" fitWidth="175.0" layoutX="758.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="Images/green.png" />
+            </image>
+        </ImageView>
+        <ImageView fx:id="blueLine" fitHeight="175.0" fitWidth="175.0" layoutX="758.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="Images/blue.png" />
+            </image>
+        </ImageView>
+        <ImageView fx:id="circle" fitHeight="175.0" fitWidth="175.0" layoutX="758.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="Images/circle.png" />
             </image>
         </ImageView>
         <Text fx:id="titleText1" fill="WHITE" layoutX="20.0" layoutY="475.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WELCOME TO THE BOSTON METRO">
