line screen almost ready, button needs tweaking and station's need to be moved to the correct spot

--- a/resources/firstScreenView.fxml
+++ b/resources/firstScreenView.fxml
@@ -27,24 +27,24 @@
         </Text>
         <Text fx:id="titleText2" fill="WHITE" layoutX="20.0" layoutY="510.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Find the fastest away around the city on a hill with ease!">
             <font>
-                <Font size="20.0" />
+                <Font name="Arial" size="20.0" />
             </font>
         </Text>
         <Text fx:id="startStationErrorMsg" text = "please choose start station" layoutX="743.0" layoutY="245.0" style="-fx-fill: red;" visible="false">
             <font>
-                <Font size="13.0" />
+                <Font name="Arial" size="13.0" />
             </font>
         </Text>
-        <ComboBox fx:id="startDestSelector" onHidden="#changeSelectorColourStart" minHeight="40" minWidth="200" promptText="START DESTINATION" layoutX="743.0" layoutY="250.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleStartSelector"/>
+        <ComboBox fx:id="startDestSelector" minHeight="40" minWidth="200" promptText="START DESTINATION" layoutX="743.0" layoutY="250.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleStartSelector"/>
         <Text fx:id="endStationErrorMsg" text = "please choose end station" layoutX="743.0" layoutY="315.0" style="-fx-fill: red;" visible="false">
             <font>
-                <Font size="13.0" />
+                <Font name="Arial" size="13.0" />
             </font>
         </Text>
-        <ComboBox fx:id="endDestSelector" onHidden="#changeSelectorColourEnd" minHeight="40" minWidth="200" promptText="END DESTINATION" layoutX="743.0" layoutY="320.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleEndSelector"/>
+        <ComboBox fx:id="endDestSelector" minHeight="40" minWidth="200" promptText="END DESTINATION" layoutX="743.0" layoutY="320.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleEndSelector"/>
         <Button  fx:id="findButton" minHeight="50" minWidth="200"  onAction="#findPathBtnClicked" layoutX="743.0" layoutY="450.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="154.0" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="FIND A ROUTE" textFill="WHITE" >
             <font>
-                <Font name="System Bold" size="16.0" />
+                <Font name="Arial" size="16.0" />
             </font>
         </Button>
     </children>
