runs now, only the half-circles don't colour in, sorry for that, will look into it

--- a/resources/firstScreenView.fxml
+++ b/resources/firstScreenView.fxml
@@ -60,7 +60,7 @@
                 <Image url="Images/whiteCircle.png" />
             </image>
         </ImageView>
-        <ComboBox fx:id="startDestSelector" onHidden="#changeSelectorColourStart" minHeight="40" minWidth="200" promptText="START DESTINATION" layoutX="743.0" layoutY="250.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleStartSelector"/>
+        <ComboBox fx:id="startDestSelector" minHeight="40" minWidth="200" promptText="START DESTINATION" layoutX="743.0" layoutY="250.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleStartSelector"/>
         <ImageView fx:id="mapButtonStart" onMouseClicked="#mapButtonStartClicked" fitHeight="50" fitWidth="50" layoutX="960.0" layoutY="235.0" pickOnBounds="true" preserveRatio="true">
             <image >
                 <Image url="Images/mapIcon.png" />
@@ -76,7 +76,7 @@
                 <Image url="Images/whiteCircle.png"/>
             </image>
         </ImageView>
-        <ComboBox fx:id="endDestSelector" onHidden="#changeSelectorColourEnd" minHeight="40" minWidth="200" promptText="END DESTINATION" layoutX="743.0" layoutY="320.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleEndSelector"/>
+        <ComboBox fx:id="endDestSelector" minHeight="40" minWidth="200" promptText="END DESTINATION" layoutX="743.0" layoutY="320.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleEndSelector"/>
         <ImageView fx:id="mapButtonEnd" fitHeight="50" fitWidth="50" layoutX="960.0" layoutY="310.0" pickOnBounds="true" preserveRatio="true">
             <image >
                 <Image url="Images/mapIcon.png" />
