--- a/resources/firstScreenView.fxml
+++ b/resources/firstScreenView.fxml
@@ -52,9 +52,20 @@
             </image>
         </ImageView>
         <ComboBox fx:id="endDestSelector" onHidden="#changeSelectorColourEnd" minHeight="40" minWidth="200" promptText="END DESTINATION" layoutX="743.0" layoutY="320.0" prefHeight="29.0" prefWidth="154.0" style="-fx-background-radius: 10; -fx-background-color: ffffff; -fx-border-color: #0B132B;" onAction="#setDefaultStyleEndSelector"/>
-        <Button  fx:id="findButton" minHeight="50" minWidth="200"  onAction="#findPathBtnClicked" layoutX="743.0" layoutY="450.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="154.0" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="FIND A ROUTE" textFill="WHITE" >
+        <Button  fx:id="findButton" minHeight="50" minWidth="200"  layoutX="743.0" layoutY="450.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="154.0" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="FIND A ROUTE" textFill="WHITE" >
             <font>
                 <Font name="System Bold" size="16.0" />
+            </font>
+        </Button>
+
+        <Button  fx:id="searchLength" minHeight="20" minWidth="70"  layoutX="743.0" layoutY="400.0" mnemonicParsing="false" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="TRANS" textFill="WHITE" >
+            <font>
+                <Font name="System Bold" size="13.0" />
+            </font>
+        </Button>
+        <Button  fx:id="searchTransitions" minHeight="20" minWidth="70" layoutX="873.0" layoutY="400.0" mnemonicParsing="false" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="STOPS" textFill="WHITE" >
+            <font>
+                <Font name="System Bold" size="13.0" />
             </font>
         </Button>
     </children>
