--- a/resources/firstScreenView.fxml
+++ b/resources/firstScreenView.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.text.Text?>
 
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.ToggleButton?>
 <AnchorPane fx:controller="View" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <ImageView fx:id="titleImage" fitWidth="686.0" layoutY="0.0" pickOnBounds="true" preserveRatio="true">
@@ -87,13 +89,12 @@
                 <Font name="Arial" size="16.0" />
             </font>
         </Button>
-
-        <Button  fx:id="searchLength" minHeight="20" minWidth="70"  layoutX="743.0" layoutY="400.0" mnemonicParsing="false" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="TRANS" textFill="WHITE" >
+        <Button  fx:id="searchLength" minHeight="20" minWidth="70"  layoutX="743.0" layoutY="390.0" mnemonicParsing="false" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="TRANS" textFill="WHITE" >
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
         </Button>
-        <Button  fx:id="searchTransitions" minHeight="20" minWidth="70" layoutX="873.0" layoutY="400.0" mnemonicParsing="false" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="STOPS" textFill="WHITE" >
+        <Button  fx:id="searchTransitions" minHeight="20" minWidth="70" layoutX="873.0" layoutY="390.0" mnemonicParsing="false" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="STOPS" textFill="WHITE" >
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
