--- a/resources/firstScreenView.fxml
+++ b/resources/firstScreenView.fxml
@@ -48,7 +48,7 @@
                 <Font name="Arial" size="20.0" />
             </font>
         </Text>
-        <Text fx:id="startStationErrorMsg" text = "please choose start station" layoutX="743.0" layoutY="245.0" style="-fx-fill: red;" visible="false">
+        <Text fx:id="startStationErrorMsg" text = "hello" layoutX="743.0" layoutY="245.0" style="-fx-fill: red;"  visible="false">
             <font>
                 <Font name="Arial" size="13.0" />
             </font>
@@ -66,16 +66,16 @@
                 <Image url="Images/mapIcon2.png" />
             </image>
         </ImageView>
-        <Text fx:id="endStationErrorMsg" text = "please choose end station" layoutX="743.0" layoutY="315.0" style="-fx-fill: red;" visible="false">
+        <Text fx:id="endStationErrorMsg" text = "hello" layoutX="743.0" layoutY="315.0" style="-fx-fill: red;" visible="false">
             <font>
                 <Font name="Arial" size="13.0" />
             </font>
         </Text>
-        <Text fx:id="matchingStationErrorMsg" text = "sorry these stations match" layoutX="743.0" layoutY="315.0" style="-fx-fill: #ff0000;" visible="false">
-            <font>
-                <Font name="Arial" size="13.0" />
-            </font>
-        </Text>
+<!--        <Text fx:id="matchingStationErrorMsg" text = "sorry these stations match" layoutX="743.0" layoutY="315.0" style="-fx-fill: #ff0000;" visible="false">-->
+<!--            <font>-->
+<!--                <Font name="Arial" size="13.0" />-->
+<!--            </font>-->
+<!--        </Text>-->
         <HBox fx:id="endingCircles" layoutX="683.0" layoutY="310.0">
         </HBox>
 <!--        <ImageView fx:id="circleEnd" fitHeight="50" fitWidth="50" layoutX="723.0" layoutY="315.0" pickOnBounds="true" preserveRatio="true">-->
@@ -89,7 +89,7 @@
                 <Image url="Images/mapIcon2.png" />
             </image>
         </ImageView>
-        <Button  fx:id="findButton" minHeight="50" minWidth="200"  onAction="#findPathBtnClicked" layoutX="743.0" layoutY="450.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="154.0" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="FIND A ROUTE" textFill="WHITE" >
+        <Button  fx:id="findButton" minHeight="50" minWidth="200" layoutX="743.0" layoutY="450.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="154.0" style="-fx-background-color: #0B132B; -fx-background-radius: 10;" text="FIND A ROUTE" textFill="WHITE" >
             <font>
                 <Font name="Arial" size="16.0" />
             </font>
