--- a/resources/mapView.fxml
+++ b/resources/mapView.fxml
@@ -16,7 +16,7 @@
          <children>
             <ImageView fitHeight="550.0" layoutX="-21.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Images/boston-map.jpg" />
+                  <Image url="@Images/mapFontVectorised.png" />
                </image>
             </ImageView>
             <Button fx:id="Riverside" layoutX="31.0" layoutY="427.0" mnemonicParsing="false" onAction="#getName" prefHeight="10.0" prefWidth="16.0" style="-fx-background-color: #149f6a;">
