--- a/resources/BostonMetroMap.fxml
+++ b/resources/BostonMetroMap.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.collections.FXCollections?>
+<?import javafx.scene.layout.BorderPane?>
 <AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mapController">
     <children>
     <Group layoutX="0" layoutY="0">
@@ -16,6 +18,7 @@
             <Image url="@Images/mapFontVectorised.png" />
         </image>
     </ImageView>
+        <Group fx:id="mapView">
             <Button fx:id="BostonCollege" layoutX="81.0" layoutY="331.0" mnemonicParsing="false" onAction="#getName" prefHeight="10.0" prefWidth="10.0" style="-fx-background-radius: 10;">
                <font>
                   <Font size="3.0" />
@@ -41,6 +44,7 @@
                   <Font size="3.0" />
                </font>
             </Button>
+        </Group>
     </children>
     </Group>
     </children>
